Table android_metadata {
    locale text
}

Table device_permission {
    _id Integer [pk]
    unit_id text [not null]
    perm_id integer [not null]
    perm_val integer [not null]
}

Table devices {
    _id Integer [pk]
    unit_id integer
    application_key text
    product_nbr text
    mac_address text
    product_display_name text
    bt_friend_name text
    connection_type text
    last_connected_timestamp integer
    software_version text
    is_software_update_available integer
    min_app_version_code_supported integer
    image_url text
    video_url text
    categories text
    is_segment_capable integer
    garmin_device_xml blob
    garmin_device_xml_id text
    is_connected integer
    sku text
    capabilities integer
    gble_ediv blob
    gble_rand blob
    gble_ltk blob
    is_vivohub_configurable integer
    sport_capabilities integer
    is_primary_user integer
    display_name text
    traing_video_url text
    active_ind integer
    part_nbr text
    fitpay_user_id text
    nfc_se_id text
    multi_link_support integer
    gcj02_course_capable integer
    activity_course_capable integer
    nfc_capable integer
    solarPanelUtilizationCapable integer
    lowHrAlertCapable integer
    abnormalHeartRateAlertCapable integer
    gcmSettingsFileName text
    sku_image_url text
    sku_image_defaultWatchFace_url text
    sku_image_defaultWatchFaceBlank_url text
    sku_image_sideProfile_url text
    sku_image_tutorial_url text
    sku_image_option1_url text
    sku_image_option2_url text
    sku_image_option3_url text
    spectatorMessagingCapable integer
    trainingStatusPauseCapable integer
    trainingStatusCapable integer
    measurmentUnitSettingCapable integer
    powerCurveCapable integer
    secondaryWorkoutStepTargetCapable integer
    assistancePlusCapable integer
    emergencyCallingCapable integer
    solarChargeCapable integer
    diveAppSyncCapable integer
    lastUploadToServerTimestamp bigint
    dayOfWeekSleepWindowCapable integer
    primaryApp integer
}

Table golf_course_image_data {
    _id integer [pk]
    device_id integer [not null]
    global_id integer [not null]
    version integer
    part_nbr text [not null]
    image_data blob [not null]
    gma_data blob
    unl_data blob
    map_type integer [not null]
}

Table golf_downloaded_course {
    _id integer [pk]
    android_download_id integer
    build_id integer [not null]
    global_layout_id integer [not null]
    "binary" blob
    download_mgr_status_reason_id integer
    download_status_id integer [not null]
    saved_timestamp integer [not null]
    name text
    street text
    city text
    state text
    postal_code text
    country text
    semi_circle_latitude integer [not null]
    semi_circle_longitude integer [not null]
    website_url text
    email text
    telephone text
    telephone_extension text
    hole_count integer
    membership_type_id integer [not null]
    designer text
    uear_designed text
    map_type integer
    version integer
}

Table json {
    _id integer [pk]
    saved_timestamp integer
    concept_name text [not null]
    cached_val text [not null]
}

Table json_activities {
    _id integer [pk]
    saved_timestamp integer
    concept_id text [not null]
    data_type text [not null]
    cached_val text [not null]
}

Table json_courses {
    _id integer [pk]
    saved_timestamp integer
    concept_id text [not null]
    data_type text [not null]
    cached_val text [not null]
}

Table json_myfitnesspal_calories {
    _id integer [pk]
    saved_timestamp integer
    concept_id text [not null]
    data_type text [not null]
    cached_val text [not null]
}

Table json_steps {
    _id integer [pk]
    saved_timestamp integer
    concept_id text [not null]
    data_type text [not null]
    cached_val text [not null]
}

Table orphan_devices {
    _id integer [pk]
    unit_id integer [not null]
    product_nbr text [not null]
    mac_address text [not null]
    product_display_name text
    bt_friend_name text
    image_url text
    part_nbr text
}

Ref: devices.unit_id < golf_course_image_data.device_id
Ref: devices.unit_id < device_permission.unit_id